--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="page-landing">
 
     <div id="container">
-        <h1>Proffy teste</h1>
+        <h1>Proffy</h1>
         <p>Sua plataforma de estudos online</p>
     
         <img src="" alt="Logo">
